# libw

./: .gitignore  INSTALL  LICENSE  Makefile.am  README  configure.ac  libw.pc.in  linux_init.sh
android/libw/jni/: Android.mk  Application.mk
android/libw/jni/libw/: Android.mk
examples/audiohello/: DummyApplication.hpp  Makefile.am  configure.ac  main.cpp
examples/libwhello/: DummyApplication.hpp  Makefile.am  configure.ac  main.cpp
include/w/: AssetManager.hpp  AudioAsset.hpp  AudioEngine.hpp  Class.hpp  Exception.hpp  Log.hpp  ResourceManager.hpp  Storage.hpp
include/w/animation/: AbstractAnimation.hpp  AnimationEngine.hpp  BezierCubicAnimation.hpp  ControlPoint.hpp  PathAnimation.hpp
include/w/audio/: AudioAsset.hpp  AudioEngine.hpp
include/w/base/: Class.hpp  Condition.hpp  Exception.hpp  File.hpp  FileHandle.hpp  Helpers.hpp  Lock.hpp  Log.hpp  Mutex.hpp  Random.hpp  Referenced.hpp  ReferencedPointer.hpp  Resource.hpp  ResourceManager.hpp  ResourceManagerPrivate.hpp  RingBuffer.hpp  Sigcpp.hpp  String.hpp  System.hpp  Thread.hpp  Timer.hpp  UniquePointer.hpp
include/w/events/: Event.hpp  EventBuffer.hpp
include/w/graphics/: Aabb.hpp  BatchableRectangleMesh.hpp  Bitmap.hpp  Distance.hpp  FrameBuffer.hpp  MeshAsset.hpp  MeshAssetFactory.hpp  MeshFactory.hpp  Plane.hpp  PolygonAsset.hpp  Renderer.hpp  ShaderProgramAsset.hpp  Stride.hpp  TextureAsset.hpp  Window.hpp
include/w/math/: Eigen.hpp  Math.hpp  Ray.hpp  Vector4.hpp
include/w/network/: Request.hpp  Response.hpp
include/w/scene/: Component.hpp  ComponentPrivate.hpp  ComponentPrivateTemplate.hpp  Node.hpp  NodePrivate.hpp  SetVisitor.hpp  Visitor.hpp
include/w/storage/: Storage.hpp
ios/libw/libw/: libw-Prefix.pch
ios/libw/libw.xcodeproj/: project.pbxproj
ios/libw/libw.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/libw/libw.xcodeproj/project.xcworkspace/xcshareddata/: libw.xccheckout
ios/libw/libw.xcodeproj/project.xcworkspace/xcuserdata/anttipe.xcuserdatad/: UserInterfaceState.xcuserstate
ios/libw/libw.xcodeproj/xcuserdata/anttipe.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
ios/libw/libw.xcodeproj/xcuserdata/anttipe.xcuserdatad/xcschemes/: libw.xcscheme  xcschememanagement.plist
src/: AssetManager.cpp  AssetManagerPrivate.cpp  AssetManagerPrivate.hpp  AudioAsset.cpp  AudioAssetPrivate.cpp  AudioAssetPrivate.hpp  AudioEngine.cpp  AudioEnginePrivate-Android.cpp  AudioEnginePrivate-Pulse.cpp  AudioEnginePrivate-iOS.cpp  AudioEnginePrivate.hpp  AudioResource.cpp  AudioResource.hpp  AudioResourceManager.cpp  AudioResourceManager.hpp  File.hpp  FileHandle.cpp  FileHandle.hpp  Lock.hpp  Log.cpp  Makefile.am  Mutex.cpp  Mutex.hpp  Referenced.cpp  Referenced.hpp  ReferencedPointer.hpp  Resource.hpp  ResourceManager.cpp  ResourceManagerPrivate.cpp  ResourceManagerPrivate.hpp  RingBuffer.hpp  Storage.cpp  StoragePrivate.cpp  StoragePrivate.hpp  String.hpp  System.hpp  Thread.cpp  Thread.hpp  Timer.cpp  Timer.hpp  (+6 more)
src/animation/: AbstractAnimation.cpp  AnimationEngine.cpp  AnimationEnginePrivate.cpp  AnimationEnginePrivate.hpp  BezierCubicAnimation.cpp  PathAnimation.cpp
src/audio/: AudioAsset.cpp  AudioAssetPrivate.cpp  AudioAssetPrivate.hpp  AudioEngine.cpp  AudioEnginePrivate-Android.cpp  AudioEnginePrivate-Pulse.cpp  AudioEnginePrivate-iOS.cpp  AudioEnginePrivate.hpp  AudioResource.cpp  AudioResource.hpp  Tracker.cpp  Tracker.hpp  TrackerProducerThread.cpp  TrackerProducerThread.hpp  TrackerSample.cpp  TrackerSample.hpp
src/base/: Condition.cpp  FileHandle.cpp  Log.cpp  Mutex.cpp  Random.cpp  Referenced.cpp  ResourceManager.cpp  ResourceManagerPrivate.cpp  Thread.cpp  Timer.cpp
src/events/: AppleTouchTracker  AppleTouchTracker.cpp  AppleTouchTracker.hpp  EventBuffer.cpp  EventBufferPrivate.cpp  EventBufferPrivate.hpp
src/graphics/: Aabb.cpp  BatchableRectangleMesh.cpp  Bitmap.cpp  BitmapPrivate.cpp  BitmapPrivate.hpp  Common.hpp  FrameBuffer.cpp  FrameBufferPrivate-GLES2.cpp  FrameBufferPrivate.hpp  MeshAsset.cpp  MeshAssetFactory.cpp  MeshAssetPrivate-GLES2.cpp  MeshAssetPrivate.hpp  PolygonAsset.cpp  PolygonAssetPrivate-GLES2.cpp  PolygonAssetPrivate.hpp  Renderer.cpp  RendererPrivate-GLES2.cpp  RendererPrivate.hpp  ShaderProgramAsset.cpp  ShaderProgramAssetPrivate-GLES2.cpp  ShaderProgramAssetPrivate.cpp  ShaderProgramAssetPrivate.hpp  TextureAsset.cpp  TextureAssetPrivate-GLES2.cpp  TextureAssetPrivate.hpp  Window.cpp  WindowPrivate-Android.cpp  WindowPrivate-XEGL.cpp  WindowPrivate-iOS.cpp  WindowPrivate.cpp  WindowPrivate.hpp
src/network/: Request.cpp  Response.cpp
src/scene/: Component.cpp  Node.cpp  NodePrivate.cpp
src/src.xcodeproj/: project.pbxproj
src/src.xcodeproj/xcuserdata/anttipe.xcuserdatad/xcschemes/: src.xcscheme  xcschememanagement.plist
src/storage/: Storage.cpp  StorageItem.hpp  StoragePrivate.cpp  StoragePrivate.hpp
