AC_INIT([audiohello], 1.0)
AC_CONFIG_MACRO_DIR([build])
AC_CONFIG_AUX_DIR([build])
AC_CONFIG_HEADERS([config.h])
AC_PROG_CXX
AC_PROG_LIBTOOL
AM_INIT_AUTOMAKE

CPPFLAGS="$CPPFLAGS -I/usr/local/include/sigc++-2.0 -I/usr/local/lib/sigc++-2.0/include"

AUDIOHELLO_DEPENDENCIES="libw"
PKG_CHECK_MODULES(AUDIOHELLO_DEPENDENCIES, "$AUDIOHELLO_DEPENDENCIES")
AC_SUBST(AUDIOHELLO_DEPENDENCIES_CFLAGS)
AC_SUBST(AUDIOHELLO_DEPENDENCIES_CPPFLAGS)
AC_SUBST(AUDIOHELLO_DEPENDENCIES_LIBS)

AC_CONFIG_FILES([Makefile])

AC_OUTPUT
